@@ -1,3 +1,14 @@
+2018-04-04  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix the build with libsoup < 2.49.91 after r230251.
+
+        Stop using ResourceHandle in SoupNetworkSession.
+
+        * platform/network/soup/SoupNetworkSession.cpp:
+        (WebCore::SoupNetworkSession::SoupNetworkSession):
+        (WebCore::authenticateCallback): Deleted.
+        (WebCore::requestStartedCallback): Deleted.
+
 2018-04-03  Alex Christensen  <achristensen@webkit.org>
 
         Remove unused libsoup ResourceHandle implementation
